--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1999,7 +1999,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/neka-nat/ez_interactive_marker.git
-      version: 0.0.2
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -2009,7 +2009,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/neka-nat/ez_interactive_marker.git
-      version: 0.0.2
+      version: kinetic-devel
   fanuc:
     doc:
       type: git
