libfranka: 0.1.0-2 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3785,11 +3785,15 @@ repositories:
       version: master
     status: developed
   libfranka:
+    doc:
+      type: git
+      url: https://github.com/frankaemika/libfranka-release.git
+      version: release/kinetic/libfranka
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/frankaemika/libfranka-release.git
-      version: 0.1.0-1
+      version: 0.1.0-2
     source:
       test_commits: false
       type: git
