--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8381,6 +8381,24 @@ repositories:
       url: https://github.com/hasauino/rrt_exploration.git
       version: kinetic-devel
     status: maintained
+  rsv_balance:
+    doc:
+      type: git
+      url: https://github.com/robosavvy/rsv_balance.git
+      version: master
+    status: maintained
+  rsv_balance_desktop:
+    doc:
+      type: git
+      url: https://github.com/robosavvy/rsv_balance_desktop.git
+      version: master
+    status: maintained
+  rsv_balance_simulator:
+    doc:
+      type: git
+      url: https://github.com/robosavvy/rsv_balance_simulator.git
+      version: master
+    status: maintained
   rtabmap:
     doc:
       type: git
