--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1327,7 +1327,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ktossell/libuvc.git
-      version: 0.0.6
+      version: master
     status: unmaintained
   libuvc_ros:
     doc:
