--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1323,7 +1323,11 @@ repositories:
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ktossell/libuvc-release.git
-      version: 0.0.5-3
+      version: 0.0.6-0
+    source:
+      type: git
+      url: https://github.com/ktossell/libuvc.git
+      version: master
     status: unmaintained
   libuvc_ros:
     doc:
