jsk_apc: 4.1.2-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -5329,13 +5329,15 @@ repositories:
       packages:
       - jsk_2015_05_baxter_apc
       - jsk_2016_01_baxter_apc
+      - jsk_apc
       - jsk_apc2015_common
       - jsk_apc2016_common
+      - jsk_arc2017_baxter
       - jsk_arc2017_common
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/tork-a/jsk_apc-release.git
-      version: 4.0.0-0
+      version: 4.1.2-0
     source:
       test_commits: false
       type: git
