brics_actuator: 0.7.0-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -328,6 +328,20 @@ repositories:
       url: https://github.com/ros/bond_core.git
       version: groovy-devel
     status: maintained
+  brics_actuator:
+    doc:
+      type: git
+      url: https://github.com/wnowak/brics_actuator.git
+      version: master
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/wnowak/brics_actuator-release.git
+      version: 0.7.0-0
+    source:
+      type: git
+      url: https://github.com/wnowak/brics_actuator.git
+      version: master
   bta_ros:
     doc:
       type: git
