Moved urdf and urdf_parser_plugin to repo URDF
Moved in indigo, kinetic, lunar
Moved from repo "robot_model" to new repo "urdf"

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10912,10 +10912,6 @@ repositories:
       url: https://github.com/ros/robot_model.git
       version: indigo-devel
     release:
-      packages:
-      - robot_model
-      - urdf
-      - urdf_parser_plugin
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-gbp/robot_model-release.git
@@ -15579,6 +15575,25 @@ repositories:
       type: git
       url: https://github.com/ThomasTimm/ur_modern_driver.git
       version: master
+    status: maintained
+  urdf:
+    doc:
+      type: git
+      url: https://github.com/ros/urdf.git
+      version: indigo-devel
+    release:
+      packages:
+      - urdf
+      - urdf_parser_plugin
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ros-gbp/urdf-release.git
+      version: 1.11.15-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/urdf.git
+      version: indigo-devel
     status: maintained
   urdf_tools:
     doc:
