--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3425,6 +3425,16 @@ repositories:
       type: git
       url: https://github.com/ingeniarius-ltd/forte_rc_robot.git
       version: indigo-devel
+  frame_editor:
+    doc:
+      type: git
+      url: https://github.com/ipa320/rqt_frame_editor_plugin.git
+      version: indigo-devel
+    source:
+      type: git
+      url: https://github.com/ipa320/rqt_frame_editor_plugin.git
+      version: indigo-devel
+    status: developed
   freefloating_gazebo:
     source:
       type: git
