--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -660,6 +660,16 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: lunar-devel
     status: maintained
+  frame_editor:
+    doc:
+      type: git
+      url: https://github.com/ipa320/rqt_frame_editor_plugin.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ipa320/rqt_frame_editor_plugin.git
+      version: kinetic-devel
+    status: developed
   gazebo_ros_pkgs:
     doc:
       type: git
