--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2848,6 +2848,18 @@ python-rrdtool:
     raring: [python-rrdtool]
     saucy: [python-rrdtool]
     trusty: [python-rrdtool]
+python-ruamel.yaml:
+  debian:
+    buster: [python-ruamel.yaml]
+    jessie: [python-ruamel.yaml]
+    stretch: [python-ruamel.yaml]
+  fedora: [python-ruamel-yaml]
+  ubuntu:
+    artful: [python-ruamel.yaml]
+    bionic: [python-ruamel.yaml]
+    xenial: [python-ruamel.yaml]
+    yakkety: [python-ruamel.yaml]
+    zesty: [python-ruamel.yaml]
 python-scapy:
   debian: [python-scapy]
   fedora: [scapy]
@@ -3916,6 +3928,17 @@ python3-pep8:
 python3-pkg-resources:
   debian: [python3-pkg-resources]
   ubuntu: [python3-pkg-resources]
+python3-ruamel.yaml:
+  debian:
+    buster: [python3-ruamel.yaml]
+    jessie: [python3-ruamel.yaml]
+    stretch: [python3-ruamel.yaml]
+  ubuntu:
+    artful: [python3-ruamel.yaml]
+    bionic: [python3-ruamel.yaml]
+    xenial: [python3-ruamel.yaml]
+    yakkety: [python3-ruamel.yaml]
+    zesty: [python3-ruamel.yaml]
 python3-setuptools:
   debian: [python3-setuptools]
   ubuntu: [python3-setuptools]
