--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3430,6 +3430,11 @@ repositories:
       type: git
       url: https://github.com/ipa320/rqt_frame_editor_plugin.git
       version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ipa320/rqt_frame_editor_plugin-release.git
+      version: 1.0.1-0
     source:
       type: git
       url: https://github.com/ipa320/rqt_frame_editor_plugin.git
