velodyne: 1.3.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15792,12 +15792,13 @@ repositories:
       packages:
       - velodyne
       - velodyne_driver
+      - velodyne_laserscan
       - velodyne_msgs
       - velodyne_pointcloud
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-drivers-gbp/velodyne-release.git
-      version: 1.2.0-0
+      version: 1.3.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/velodyne.git
