--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3439,6 +3439,70 @@ meshlab:
   fedora: [meshlab]
   gentoo: [media-gfx/meshlab]
   ubuntu: [meshlab]
+mkdocs:
+  debian:
+    buster: [mkdocs]
+    jessie:
+      pip:
+        packages: [mkdocs]
+    stretch: [mkdocs]
+    wheezy:
+      pip:
+        packages: [mkdocs]
+  fedora: [mkdocs]
+  gentoo: [dev-python/mkdocs]
+  ubuntu:
+    artful: [mkdocs]
+    bionic: [mkdocs]
+    trusty:
+      pip:
+        packages: [mkdocs]
+    xenial: [mkdocs]
+    zesty: [mkdocs]
+mkdocs-bootstrap:
+  debian:
+    buster: [mkdocs-bootstrap]
+    jessie:
+      pip:
+        packages: [mkdocs-bootstrap]
+    stretch: [mkdocs-bootstrap]
+    wheezy:
+      pip:
+        packages: [mkdocs-bootstrap]
+  fedora: [mkdocs-bootstrap]
+  gentoo: [dev-python/mkdocs-bootstrap]
+  ubuntu:
+    artful: [mkdocs-bootstrap]
+    bionic: [mkdocs-bootstrap]
+    trusty:
+      pip:
+        packages: [mkdocs-bootstrap]
+    xenial:
+      pip:
+        packages: [mkdocs-bootstrap]
+    zesty: [mkdocs-bootstrap]
+mkdocs-bootswatch:
+  debian:
+    buster: [mkdocs-bootswatch]
+    jessie:
+      pip:
+        packages: [mkdocs-bootswatch]
+    stretch: [mkdocs-bootswatch]
+    wheezy:
+      pip:
+        packages: [mkdocs-bootswatch]
+  fedora: [mkdocs-bootswatch]
+  gentoo: [dev-python/mkdocs-bootswatch]
+  ubuntu:
+    artful: [mkdocs-bootswatch]
+    bionic: [mkdocs-bootswatch]
+    trusty:
+      pip:
+        packages: [mkdocs-bootswatch]
+    xenial:
+      pip:
+        packages: [mkdocs-bootswatch]
+    zesty: [mkdocs-bootswatch]
 mongodb:
   debian: [mongodb]
   fedora: [mongodb]
