intermediate ubuntu distros

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3457,7 +3457,12 @@ mkdocs:
     trusty:
       pip:
         packages: [mkdocs]
+    utopic:
+      pip:
+        packages: [mkdocs]
+    wily: [mkdocs]
     xenial: [mkdocs]
+    yakkty: [mkdocs]
     zesty: [mkdocs]
 mkdocs-bootstrap:
   debian:
@@ -3477,9 +3482,16 @@ mkdocs-bootstrap:
     trusty:
       pip:
         packages: [mkdocs-bootstrap]
+    utopic:
+      pip:
+        packages: [mkdocs-bootswatch]
+    wily:
+      pip:
+        packages: [mkdocs-bootswatch]
     xenial:
       pip:
         packages: [mkdocs-bootstrap]
+    yakkety: [mkdocs-bootstrap]
     zesty: [mkdocs-bootstrap]
 mkdocs-bootswatch:
   debian:
@@ -3499,7 +3511,16 @@ mkdocs-bootswatch:
     trusty:
       pip:
         packages: [mkdocs-bootswatch]
+    utopic:
+      pip:
+        packages: [mkdocs-bootswatch]
+    wily:
+      pip:
+        packages: [mkdocs-bootswatch]
     xenial:
+      pip:
+        packages: [mkdocs-bootswatch]
+    yakkety:
       pip:
         packages: [mkdocs-bootswatch]
     zesty: [mkdocs-bootswatch]
