--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -744,12 +744,12 @@ flex:
   gentoo: [sys-devel/flex]
   macports: [flex]
   ubuntu: [flex]
-fltk:
+fltk:  # Consider using the libfltk-dev and fluid (fltk runtime) keys instead.
   arch: [fltk]
   debian: [libfltk1.1-dev]
   fedora: [fltk-devel, fltk-fluid]
   freebsd: [fltk]
-  gentoo: [=x11-libs/fltk-1*]
+  gentoo: ['=x11-libs/fltk-1*']
   macports: [fltk]
   opensuse: [fltk-devel]
   slackware: [fltk]
@@ -772,7 +772,7 @@ fluid:
   debian: [libfltk1.1-dev]
   fedora: [fltk-fluid]
   freebsd: [fltk]
-  gentoo: [=x11-libs/fltk-1*]
+  gentoo: ['=x11-libs/fltk-1*']
   macports: [fltk]
   opensuse: [fltk-devel]
   ubuntu: [fluid]
@@ -837,7 +837,7 @@ gazebo:
 gazebo5:
   arch: [gazebo]
   fedora: [gazebo]
-  gentoo: [=sci-electronics/gazebo-5*]
+  gentoo: ['=sci-electronics/gazebo-5*']
   ubuntu: [gazebo5]
 gazebo7:
   arch: [gazebo]
@@ -845,7 +845,7 @@ gazebo7:
     buster: [gazebo7]
     stretch: [gazebo7]
   fedora: [gazebo]
-  gentoo: [=sci-electronics/gazebo-7*]
+  gentoo: ['=sci-electronics/gazebo-7*']
   slackware: [gazebo]
   ubuntu: [gazebo7]
 gcc-arm-none-eabi:
@@ -1286,10 +1286,10 @@ java:
     jessie: [openjdk-7-jdk]
     wheezy: [openjdk-7-jdk]
   fedora:
-    21: [java-1.8.0-openjdk]
-    22: [java-1.8.0-openjdk]
-    23: [java-1.8.0-openjdk]
-    24: [java-1.8.0-openjdk]
+    '21': [java-1.8.0-openjdk]
+    '22': [java-1.8.0-openjdk]
+    '23': [java-1.8.0-openjdk]
+    '24': [java-1.8.0-openjdk]
     beefy: [java-1.7.0-openjdk]
     heisenbug: [java-1.8.0-openjdk, java-1.7.0-openjdk]
     schrödinger’s: [java-1.8.0-openjdk, java-1.7.0-openjdk]
@@ -1383,7 +1383,7 @@ libargtable2-dev:
   arch: [argtable]
   debian: [libargtable2-dev]
   fedora: [argtable2-devel]
-  gentoo: [=dev-libs/argtable-2*]
+  gentoo: ['=dev-libs/argtable-2*']
   ubuntu: [libargtable2-dev]
 libaria:
   debian:
@@ -1480,7 +1480,7 @@ libcap2-bin:
   arch: [libcap]
   debian: [libcap2-bin]
   fedora: [libcap]
-  gentoo: [=sys-libs/libcap-2*]
+  gentoo: ['=sys-libs/libcap-2*']
   ubuntu: [libcap2-bin]
 libccd-dev:
   arch: [libccd]
@@ -1506,7 +1506,7 @@ libcoin60-dev:
   debian:
     wheezy: [libcoin60-dev]
   fedora: [Coin2-devel]
-  gentoo: [=media-libs/coin-3.1.3*]
+  gentoo: ['=media-libs/coin-3.1.3*']
   ubuntu: [libcoin60-dev]
 libcoin80-dev:
   debian:
@@ -1728,7 +1728,7 @@ libftgl-dev:
 libgazebo5-dev:
   arch: [gazebo]
   fedora: [gazebo-devel]
-  gentoo: [=sci-electronics/gazebo-5*]
+  gentoo: ['=sci-electronics/gazebo-5*']
   ubuntu: [libgazebo5-dev]
 libgazebo7-dev:
   arch: [gazebo]
@@ -1736,8 +1736,8 @@ libgazebo7-dev:
     buster: [libgazebo7-dev]
     stretch: [libgazebo7-dev]
   fedora:
-    25: [gazebo-devel]
-  gentoo: [=sci-electronics/gazebo-7*]
+    '25': [gazebo-devel]
+  gentoo: ['=sci-electronics/gazebo-7*']
   opensuse: [gazebo-devel]
   slackware: [gazebo]
   ubuntu: [libgazebo7-dev]
@@ -2154,10 +2154,10 @@ libmysqlclient-dev:
   arch: [mariadb]
   debian: [libmysqlclient-dev]
   fedora:
-    21: [mariadb-devel]
-    22: [mariadb-devel]
-    23: [mariadb-devel]
-    24: [mariadb-devel]
+    '21': [mariadb-devel]
+    '22': [mariadb-devel]
+    '23': [mariadb-devel]
+    '24': [mariadb-devel]
     beefy: [mysql-devel]
     heisenbug: [mariadb-devel]
     schrödinger’s: [mariadb-devel]
@@ -2217,7 +2217,7 @@ libnotify:
 libnss3-dev:
   debian: [libnss3-dev]
   fedora: [nss-devel]
-  gentoo: [=dev-libs/nss-3*]
+  gentoo: ['=dev-libs/nss-3*']
   ubuntu: [libnss3-dev]
 libogg:
   arch: [libogg]
@@ -2469,10 +2469,10 @@ libpq-dev:
   arch: [postgresql-libs]
   debian: [libpq-dev]
   fedora:
-    21: [derelict-PQ-devel, postgresql-devel]
-    22: [derelict-PQ-devel, postgresql-devel]
-    23: [derelict-PQ-devel, postgresql-devel]
-    24: [derelict-PQ-devel, postgresql-devel]
+    '21': [derelict-PQ-devel, postgresql-devel]
+    '22': [derelict-PQ-devel, postgresql-devel]
+    '23': [derelict-PQ-devel, postgresql-devel]
+    '24': [derelict-PQ-devel, postgresql-devel]
     beefy: [derelict-postgresql-devel, postgresql-devel]
     heisenbug: [derelict-postgresql-devel, postgresql-devel]
     schrödinger’s: [derelict-postgresql-devel, postgresql-devel]
@@ -2891,7 +2891,7 @@ libsvm-dev:
 libsvm3:
   debian: [libsvm3]
   fedora: [libsvm]
-  gentoo: [=sci-libs/libsvm-3*]
+  gentoo: ['=sci-libs/libsvm-3*']
   ubuntu: [libsvm3]
 libsvn-dev:
   debian: [libsvn-dev]
@@ -3074,10 +3074,10 @@ libusb-1.0:
   arch: [libusbx]
   debian: [libusb-1.0-0]
   fedora:
-    21: [libusbx]
-    22: [libusbx]
-    23: [libusbx]
-    24: [libusbx]
+    '21': [libusbx]
+    '22': [libusbx]
+    '23': [libusbx]
+    '24': [libusbx]
     beefy: [libusb1]
     heisenbug: [libusbx]
     schrödinger’s: [libusbx]
@@ -3089,12 +3089,12 @@ libusb-1.0-dev:
   arch: [libusbx]
   debian: [libusb-1.0-0-dev]
   fedora:
-    21: [libusbx-devel]
-    22: [libusbx-devel]
-    23: [libusbx-devel]
-    24: [libusbx-devel]
-    25: [libusbx-devel]
-    26: [libusbx-devel]
+    '21': [libusbx-devel]
+    '22': [libusbx-devel]
+    '23': [libusbx-devel]
+    '24': [libusbx-devel]
+    '25': [libusbx-devel]
+    '26': [libusbx-devel]
     beefy: [libusb1-devel]
     heisenbug: [libusbx-devel]
     schrödinger’s: [libusbx-devel]
@@ -3433,10 +3433,10 @@ lua-dev:
   arch: [lua]
   debian: [liblua5.1-0-dev]
   fedora:
-    21: [compat-lua-devel]
-    22: [compat-lua-devel]
-    23: [compat-lua-devel]
-    24: [compat-lua-devel]
+    '21': [compat-lua-devel]
+    '22': [compat-lua-devel]
+    '23': [compat-lua-devel]
+    '24': [compat-lua-devel]
     beefy: [lua-devel]
     heisenbug: [compat-lua-devel]
     schrödinger’s: [lua-devel]
@@ -3493,9 +3493,17 @@ meld:
   gentoo: [dev-util/meld]
   ubuntu: [meld]
 mercurial:
+  arch: [mercurial]
+  debian: [mercurial]
+  fedora: [mercurial]
+  freebsd: [mercurial]
+  gentoo: [dev-vcs/mercurial]
+  macports: [mercurial]
+  opensuse: [mercurial]
   osx:
     pip:
       packages: [mercurial]
+  ubuntu: [mercurial]
 mesa-common-dev:
   arch: [mesa]
   debian: [mesa-common-dev]
@@ -3946,7 +3954,7 @@ portaudio:
 portaudio19-dev:
   debian: [portaudio19-dev]
   fedora: [libportaudio-devel]
-  gentoo: [=media-libs/portaudio-19*]
+  gentoo: ['=media-libs/portaudio-19*']
   ubuntu: [portaudio19-dev]
 postgresql:
   debian: [postgresql, postgresql-contrib]
@@ -3959,7 +3967,7 @@ postgresql-9.x-postgis:
     stretch: [postgresql-9.6-postgis-2.3]
     wheezy: [postgresql-9.4-postgis-2.1]
   fedora: [postgis]
-  gentoo: [dev-db/postgis, =dev-db/postgresql-9*]
+  gentoo: [dev-db/postgis, '=dev-db/postgresql-9*']
   ubuntu:
     precise: [postgresql-9.1-postgis, postgresql-contrib-9.1, postgresql-server-dev-9.1]
     raring: [postgresql-9.1-postgis, postgresql-contrib-9.1, postgresql-server-dev-9.1]
@@ -4375,7 +4383,7 @@ python-box2d:
 python-bs4:
   debian: [python-bs4]
   fedora: [python-beautifulsoup4]
-  gentoo: [=dev-python/beautifulsoup-4*]
+  gentoo: ['=dev-python/beautifulsoup-4*']
   ubuntu: [python-bs4]
 python-bson:
   debian: [python-bson]
@@ -4914,10 +4922,10 @@ python-flake8:
     jessie: [python-flake8]
     stretch: [python-flake8]
   fedora:
-    21: [python-flake8]
-    22: [python-flake8]
-    23: [python-flake8]
-    24: [python-flake8]
+    '21': [python-flake8]
+    '22': [python-flake8]
+    '23': [python-flake8]
+    '24': [python-flake8]
     heisenbug: [python-flake8]
   gentoo: [dev-python/flake8]
   ubuntu:
@@ -5168,7 +5176,7 @@ python-gtk2:
   debian: [python-gtk2]
   fedora: [pygtk2]
   freebsd: [py-gtk2]
-  gentoo: [=dev-python/pygtk-2*]
+  gentoo: ['=dev-python/pygtk-2*']
   macports: [py27-gtk]
   opensuse: [python-gtk]
   osx:
@@ -5231,12 +5239,12 @@ python-imaging:
   arch: [python2-pillow]
   debian: [python-imaging]
   fedora:
-    21: [python-pillow, python-pillow-qt]
-    22: [python-pillow, python-pillow-qt]
-    23: [python-pillow, python-pillow-qt]
-    24: [python-pillow, python-pillow-qt]
-    25: [python-pillow, python-pillow-qt]
-    26: [python-pillow, python-pillow-qt]
+    '21': [python-pillow, python-pillow-qt]
+    '22': [python-pillow, python-pillow-qt]
+    '23': [python-pillow, python-pillow-qt]
+    '24': [python-pillow, python-pillow-qt]
+    '25': [python-pillow, python-pillow-qt]
+    '26': [python-pillow, python-pillow-qt]
     beefy: [python-imaging]
     heisenbug: [python-pillow, python-pillow-qt]
     schrödinger’s: [python-pillow, python-pillow-qt]
@@ -5312,7 +5320,7 @@ python-jasmine-pip:
 python-jinja2:
   debian: [python-jinja2]
   fedora: [python-jinja2]
-  gentoo: [=dev-python/jinja-2*]
+  gentoo: ['=dev-python/jinja-2*']
   ubuntu: [python-jinja2]
 python-jira-pip:
   ubuntu:
@@ -6079,7 +6087,7 @@ python-psutil:
 python-psycopg2:
   debian: [python-psycopg2]
   fedora: [python-psycopg2]
-  gentoo: [=dev-python/psycopg-2*]
+  gentoo: ['=dev-python/psycopg-2*']
   ubuntu:
     lucid: [python-psycopg2]
     maverick: [python-psycopg2]
@@ -6986,7 +6994,7 @@ python-sip:
 python-sip4:
   debian: [python-sip-dev]
   fedora: [sip]
-  gentoo: [=dev-python/sip-4*]
+  gentoo: ['=dev-python/sip-4*']
   macports: [py27-sip4]
 python-six:
   arch: [python2-six]
@@ -7241,8 +7249,8 @@ python-tabulate:
     buster: [python-tabulate]
     stretch: [python-tabulate]
   fedora:
-    23: [python-tabulate]
-    24: [python-tabulate]
+    '23': [python-tabulate]
+    '24': [python-tabulate]
   gentoo: [dev-python/tabulate]
   ubuntu:
     wily: [python-tabulate]
@@ -7385,10 +7393,10 @@ python-theano:
 python-tilestache:
   debian: [tilestache]
   fedora:
-    21: [python-tilestache]
-    22: [python-tilestache]
-    23: [python-tilestache]
-    24: [python-tilestache]
+    '21': [python-tilestache]
+    '22': [python-tilestache]
+    '23': [python-tilestache]
+    '24': [python-tilestache]
     heisenbug: [python-tilestache]
     schrödinger’s: [python-tilestache]
   ubuntu: [tilestache]
@@ -7997,7 +8005,7 @@ rosemacs-el:
 rpy2:
   arch: [python-rpy2]
   debian: [python-rpy2]
-  gentoo: [=dev-python/rpy-2*]
+  gentoo: ['=dev-python/rpy-2*']
   ubuntu: [python-rpy2]
 rsync:
   arch: [rsync]
@@ -8181,7 +8189,7 @@ sqlite3:
   arch: [sqlite]
   debian: [sqlite3]
   fedora: [sqlite]
-  gentoo: [=dev-db/sqlite-3*]
+  gentoo: ['=dev-db/sqlite-3*']
   ubuntu: [sqlite3]
 ssh-askpass:
   debian: [ssh-askpass]
