--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2237,7 +2237,7 @@ libopenni2-dev:
   ubuntu: [libopenni2-dev]
 libopenscenegraph:
   arch: [openscenegraph]
-  debian: [openscenegraph, libopenscenegraph-dev, libopenscenegraph80, libopenthreads-dev, libopenthreads14]
+  debian: [openscenegraph, libopenscenegraph-dev]
   fedora: [OpenSceneGraph, OpenSceneGraph-devel, OpenThreads, OpenThreads-devel]
   gentoo: [dev-games/openscenegraph]
   ubuntu: [openscenegraph, libopenscenegraph-dev]
