Altered source version to indigo-devel

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -246,7 +246,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/adrianohrl/alliance.git
-      version: 'master'
+      version: indigo-devel
     status: developed
   android_apps:
     doc:
