added lzma library

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2034,6 +2034,9 @@ liblttng-ust-dev:
   fedora: [lttng-ust]
   gentoo: [dev-util/lttng-ust]
   ubuntu: [liblttng-ust-dev]
+liblzma-dev:
+  debian: [liblzma-dev]
+  ubuntu: [liblzma-dev]
 libmagick:
   arch: [imagemagick]
   debian: [libmagick++-dev]
