add fedora rule

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2036,6 +2036,7 @@ liblttng-ust-dev:
   ubuntu: [liblttng-ust-dev]
 liblzma-dev:
   debian: [liblzma-dev]
+  fedora: [lzma-devel]
   ubuntu: [liblzma-dev]
 libmagick:
   arch: [imagemagick]
