--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -245,6 +245,12 @@ repositories:
       url: https://github.com/tstoyanov/perception_oru-private.git
       version: port-kinetic
     status: developed
+  pnp_ros:
+    source:
+      type: git
+      url: https://github.com/marc-hanheide/PetriNetPlans.git
+      version: catkinised
+    status: developed
   robomongo_ros:
     source:
       type: git
