--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3864,6 +3864,12 @@ repositories:
       url: https://github.com/ros-visualization/visualization_tutorials.git
       version: kinetic-devel
     status: maintained
+  vrpn:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-drivers-gbp/vrpn-release.git
+      version: 0.7.33-0
   warehouse_ros:
     doc:
       type: git
