--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10579,7 +10579,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/vrpn_client_ros.git
-      version: indigo-devel
+      version: kinetic-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -10588,7 +10588,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/vrpn_client_ros.git
-      version: indigo-devel
+      version: kinetic-devel
     status: maintained
   warehouse_ros:
     doc:
