--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7213,6 +7213,22 @@ repositories:
       url: https://github.com/rodibot/rodi_robot.git
       version: master
     status: maintained
+  romeo_moveit_config:
+    doc:
+      type: git
+      url: https://github.com/ros-aldebaran/romeo_moveit_config.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-aldebaran/romeo_moveit_config-release.git
+      version: 0.2.8-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-aldebaran/romeo_moveit_config.git
+      version: master
+    status: developed
   romeo_robot:
     doc:
       type: git
